--- a/JS others/JS忍者秘籍/正则表达式.md
+++ b/JS others/JS忍者秘籍/正则表达式.md
@@ -28,5 +28,7 @@
 
 如果写成`/<(\w+)>.+<\/\w>/`这样，可能会匹配到非法的HTML字符串，如：`<h1>hhh</span>`
 
-##
+## 没有捕获的分组
+
+可以在正则表达式里面用`/(?:\w)/`表示这个是不被捕获的分组，加入`?:`之后该分组匹配到东西之后不会进行捕获
 
