feat: 增加对水平布局的理解

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -8,4 +8,11 @@
 
 ## 强缓存和协商缓存
 
+强缓存：状态码（200 from cache）客户端直接从缓存中请求，若缓存的数据还未过期，则直接从缓存中取出使用，若已过期，则进入协商缓存阶段。
 
+协商缓存：状态码（304 not modify）强缓存没有命中，则客户端会向服务器发送一个关于缓存文件的标识，服务器验证这个标识来判断静态资源缓存是否失效，若没失效则直接通知客户端可以从缓存中取出，若失效了则把最新的文件返回给客户端。
+
+
+## 强缓存的详细过程
+
+客户端有一套自己的方法来验证强缓存的静态文件是否失效。
