feat: 补充浏览器缓存总结

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -18,11 +18,11 @@
 
 客户端有一套自己的方法来验证强缓存的静态文件是否失效。
 
-HTTP 1.0 时代：Expires
+- HTTP 1.0 时代：Expires
 
 > Expires的值为服务端返回的到期时间，即下一次请求时，请求时间小于服务端返回的到期时间，直接使用缓存数据。不过存在一个问题，到期时间是服务端生成的，而请求时间是客户端生成的，并不能保证服务端和客户端的实际时间没有太大误差，这会导致缓存命中的误差。所以我们现在使用Cache-Control
 
-HTTP 1.1 时代：Cache-Control
+- HTTP 1.1 时代：Cache-Control
 
 > 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。
 
@@ -44,12 +44,12 @@ HTTP 1.1 时代：Cache-Control
 
 > 浏览器第一次请求静态资源时，服务器会将缓存标识和数据一起返回给客户端，客户端将两个都备份到缓存中。需要到协商缓存时，客户端会将已备份的缓存标识发送给服务器，服务器根据缓存标识进行判断，若成功，则返回 304 not modify 状态码，通知客户端可以使用缓存。
 
-Last-Modified / If-Modified-Since
+- Last-Modified / If-Modified-Since
 
 `Last-Modified`就是那个第一次请求静态资源时**服务端返回**的缓存标识，这个键的值是这个资源最后修改的时间。然后进行协商缓存的时候，由**客户端**发起的请求中，会带有`If-Modified-Since`这个请求头，当服务器发现这个请求头后，则会与被请求的资源的最后的修改时间作对比，若最后修改的时间大于这次请求发过来的`If-Modified-Since`，就表示静态资源作了修改，对比缓存失败，则会整个静态资源重新给客户端返回。若`If-Modified-Since`小于或者等于资源的最后修改时间，则表示资源无更新，直接返回304让浏览器使用之前缓存好的文件。
 
 
-Etag / If-None-Match（优先级高于Last-Modified / If-Modified-Since）
+- Etag / If-None-Match（优先级高于Last-Modified / If-Modified-Since）
 
 `Etag`也是那个第一次请求静态资源时**服务端返回**的缓存标识，不过不同的是，`Etag`并不是根据时间计算的，它有多种计算方式。
 
