feat: 修改缓存总结

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -24,11 +24,11 @@
 
 - HTTP 1.1 时代：Cache-Control
 
-> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。
+> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。（这里讨论响应头，不过作为请求头或是响应头道理都差不多）
 
-- private：客户端可以缓存
-- public：客户端和代理服务器都可缓存（其实我觉得和上面那个差不多）
-- max-age=xxx ：缓存内容将在xxx秒后消失
+- private：仅向特定用户返回响应（只在响应头中存在）
+- public：可向任意方提供响应的缓存（只在响应头中存在）
+- max-age=xxx：缓存内容将在xxx秒后消失
 - no-cache：需要使用协商缓存来验证缓存数据
 - no-store：所有内容都不会缓存，强缓存和协商缓存都不触发
 
