feat: 修改浏览器缓存总结

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -24,7 +24,7 @@
 
 - HTTP 1.1 时代：Cache-Control
 
-> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。（这里讨论响应头，不过作为请求头或是响应头道理都差不多）
+> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。（这里讨论响应头）
 
 - private：仅向特定用户返回响应（只在响应头中存在）
 - public：可向任意方提供响应的缓存（只在响应头中存在）
