feat: 修改Cache-Control的理解

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -24,7 +24,7 @@
 
 - HTTP 1.1 时代：Cache-Control
 
-> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。（这里讨论响应头）
+> 鉴于以上Expires的缺点，我们HTTP1.1使用Cache-Control代替它，Cache-Control常见的取值有private、public、no-cache、max-age，no-store，默认为private。（这里讨论响应头，Cache-Control可以存在在响应头和请求头中，但一般来说会在响应头中并且制定该资源缓存机制，在请求头中发挥的作用不大）
 
 - private：仅向特定用户返回响应（只在响应头中存在）
 - public：可向任意方提供响应的缓存（只在响应头中存在）
