fix: 修正React性能优化的总结

--- a/React/markDown/optimizing/性能优化.md
+++ b/React/markDown/optimizing/性能优化.md
@@ -64,7 +64,7 @@ shouldComponentUpdate(nextProps, nextState) {
 
 使用类似的方法对组件的prop和state进行浅比较（具体比较方式不清楚），如果没有变化则选择不重新渲染。
 
-由于使用浅比较的形式，所以我们可以通过`concat`，扩展运算符`...`，`Object.assign`这些函数来返回新的对象，从而修改之后触发更新。（因为只修改对象的属性的话并不会修改对象的引用，所以浅比较无法识别出区别）
+由于使用浅比较的形式，所以我们可以通过`concat`，扩展运算符`...`，`Object.assign`这些函数来返回新的对象，从而修改之后触发更新。（因为如果对象的属性也是个对象的话，对其进行直接修改并不会修改其地址，所以浅比较无法识别出区别，也就导致了无法重新render DOM）
 
 > 或者说：我们使用`immutable`数据类型来作为组件内的数据
 
