feat: 补充HTTP缓存机制

--- a/JS others/Browser-Cache/浏览器缓存机制2.0.md
+++ b/JS others/Browser-Cache/浏览器缓存机制2.0.md
@@ -71,11 +71,11 @@
 
 F5
 
-> 这种方式把帮助强缓存系列的响应头的信息重置。使得强缓存失效，最多只能使用协商缓存
+> 这种方式把帮助强缓存系列的响应头的信息重置。使得强缓存失效，最多只能使用协商缓存。原理是每个请求带上`Cache-Control:max-age=0`
 
 Ctrl + F5
 
-> 这种方式会使强缓存和协商缓存同时失效，只能从服务器重新请求静态资源
+> 这种方式会使强缓存和协商缓存同时失效，只能从服务器重新请求静态资源，给每个请求带上`Cache-Control:no-cache`
 
 ---
 
